...
      "path": {
        "type": "String"
      }
    }
  },
  "albumExport": "Export to Music",
  "osdAudioQuality": "Audio quality",
  "osdTheme": "Theme",
  "osdThemeWithTooltip": "Theme {tooltip}",
  "@osdThemeWithTooltip": {
    "placeholders": {
      "tooltip": {
        "type": "String"
      }
...
